--- a/04-backend-server/public/index.html
+++ b/04-backend-server/public/index.html
@@ -3,41 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="google-signin-client_id" content="1045072534136-oqkjcjvo449uls0bttgvl3aejelh22f5.apps.googleusercontent.com">
-
     <title>Demo Login</title>
 </head>
 <body>
-
-    <h1>Google Sign-in</h1>
-    <div class="g-signin2" data-onsuccess="onSignIn"></div>
-
-
-    <script src="https://apis.google.com/js/platform.js" async defer></script>
-
-    <a href="#" onclick="signOut();">Sign out</a>
-
+    <script src="https://accounts.google.com/gsi/client" async></script>
     <script>
-        function onSignIn(googleUser) {
-            var profile = googleUser.getBasicProfile();
-            console.log('ID: ' + profile.getId()); // Do not send to your backend! Use an ID token instead.
-            console.log('Name: ' + profile.getName());
-            console.log('Image URL: ' + profile.getImageUrl());
-            console.log('Email: ' + profile.getEmail()); // This is null if the 'email' scope is not present.
-
-            var id_token = googleUser.getAuthResponse().id_token;
-            console.log(id_token);
-
+        function handleCredentialResponse(response) {
+            console.log("Encoded JWT ID token: " + response.credential);
         }
-
-        // Cerrar sesión
-        function signOut() {
-            var auth2 = gapi.auth2.getAuthInstance();
-            auth2.signOut().then(function () {
-            console.log('User signed out.');
+        window.onload = function () {
+            google.accounts.id.initialize({
+                client_id: "879582612969-4j43lmdap0lsd7jm1efko2945vf5j00p.apps.googleusercontent.com",
+              callback: handleCredentialResponse
             });
+            google.accounts.id.renderButton(
+                document.getElementById("buttonDiv"),
+                { theme: "outline", size: "large" }  // customization attributes
+            );
+            google.accounts.id.prompt(); // also display the One Tap dialog
         }
     </script>
-    
+    <div id="buttonDiv"></    
 </body>
 </html>
